--- a/style.css
+++ b/style.css
@@ -64,11 +64,11 @@ padding: 10px;
 }
 .tool_img {
     display: flex;
-    height: 100%;
+    height: 1000;
     width: 100px;
-    padding: 10px;
+    float: left;
     text-align: center;
-    
+    padding: 5px;
 
 
     
